<resources>
    <string name="app_name">Star Meet</string>
    <string name="client_key">app-android-dev</string>
    <string name="client_secret">B1495148-7116-43C7-8414-C46BF1019F85</string>
    <string name="rest_api_url">https://starmeet-api.eleview.com/</string>
    <string name="text_open">Open</string>
    <string name="text_close">Close</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_title_txt">Welcome to</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="sign_in">Sign In</string>
    <string name="email_user_name">Email/User Name</string>
    <string name="password">Password</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="create_account">Create Account</string>
    <string name="if_you_are_a_celebrity">If you are a celebrity</string>
    <string name="register_here">Register Here</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="next">next</string>
    <string name="next_big">NEXT</string>
    <string name="all_events">All Events</string>
    <string name="all_reserved">© 2018 StarMeet, All rights reserved.</string>
    <string name="sign_out">Sign Out</string>
    <string name="faq_help">FAQ/Help</string>
    <string name="my_account">My Account</string>
    <string name="charities">Charities</string>
    <string name="starevents">StarEvents</string>
    <string name="starchat">StarChat</string>
    <string name="charties_we_supportp">Charties We Supportp</string>
    <string name="charities_small_txt">20% of every purchase will support one of these of your choise:</string>
    <string name="www_unicef_org">WWW.UNICEF.ORG</string>
    <string name="unicef_works">UNICEF works in 190 countries and territories to protect the rights of every child. UNICEF has spent 70 years working to improve the lives of children and their families. Defending children’s rights throughout their lives requires a global presence, aiming to produce results and understand their effects.</string>
    <string name="write_message_here">Write message here</string>
    <string name="status_delivered">Delivered</string>
    <string name="celebrity_is_online">Celebrity is online!</string>
    <string name="waiting_for_celebrity_to_start">Waiting for celebrity to start...</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="try_to_reconnectt">Try to Reconnectt</string>
    <string name="you_ended_the_call">You ended the call!</string>
    <string name="next_button">Next</string>
    <string name="phone">Phone</string>
    <string name="payment_information">Payment Information</string>
    <string name="name">Name</string>
    <string name="billing_address_2">Billing address 2</string>
    <string name="billing_address_1">Billing address 1</string>
    <string name="city">City</string>
    <string name="zip_postal_code">ZIP/Postal code</string>
    <string name="card_number">Card number</string>
    <string name="month">Month</string>
    <string name="Year">Year</string>
    <string name="cvv">CVV2</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="done">Done</string>
    <string name="select_a_value">Select a value</string>
    <string name="sort_by">Sort by</string>
    <string name="rs">\u20A8</string>
    <string name="buy_now">BUY NOW</string>
    <string name="cause">Cause</string>
    <string name="event_tab_name">Event</string>
    <string name="bio_tab_name">Celebrity Bio</string>
    <string name="currency">Currency</string>
    <string name="purshase_now">Purshase Now</string>
    <string name="inr">INR</string>
    <string name="usd">USD</string>
    <string name="event_date_time">Event Date/Time</string>
    <string name="payment_info">Playment Info</string>
    <string name="wishlist">Wishlist</string>
    <string name="account_info">Account info</string>
    <string name="my_orders">My Orders</string>
    <string name="my_events">My Events</string>
    <string name="charities_we_support">Charities We Support</string>
    <string name="_20_of_every_purshase_will_support_one_of_these_of_your_choise">10% of every purchase will support a charity listed here</string>
    <string name="update">Update</string>
    <string name="current_password">Current password</string>
    <string name="your_current_password">Your current password</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="events">Events</string>
    <string name="celebrity">Celebrity</string>
    <string name="amount">Amount</string>
    <string name="qty">QTY</string>
    <string name="purshase_date">Purshase Date</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="event_details">Event Details</string>
    <string name="add_new_card">Add new card</string>
    <string name="profile_upcoming">Upcoming Events</string>
    <string name="profile_past">Past Events</string>
    <string name="dashboard">Dashboard</string>
    <string name="celebrity_dashboard">Celebrity Dashboard</string>
    <string name="my_biography">My Biography</string>
    <string name="created">Created</string>
    <string name="category">Category</string>
    <string name="charity">Charity</string>
    <string name="offer_type">Offer Type</string>
    <string name="event_type">Event type</string>
    <string name="event_time">Event Time</string>
    <string name="starlottery">StarLottery</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="total_price">Total price</string>
    <string name="my_cards">My Cards</string>
    <string name="new_card">(add new card)</string>
    <string name="pay_now">PAY NOW</string>
    <string name="purchase_confirmation">Purchase Confirmation</string>
    <string name="success">SUCCESS</string>
    <string name="order_information">Order Information</string>
    <string name="id">ID</string>
    <string name="start_time">Start Time</string>
    <string name="order_date_time">Order Date/Time</string>
    <string name="billing_information">Billing information</string>
    <string name="address_2">Address 2</string>
    <string name="address_1">Address 1</string>
    <string name="card_information">Card Information</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="start_chat_now">Start Chat Now</string>
    <string name="pref_speakerphone_default">w</string>
    <string name="pref_speakerphone_key">S</string>
    <string name="try_to_reconnect">Try to Reconnect</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>
    <string name="numbers_of_entries">Numbers of Entries</string>
    <string name="user_is_ready">User is ready!</string>
    <string name="click_quot_start_quot_button_if_you_are_ready">Click \"Start\" button if you are ready.</string>
</resources>
