<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/all_events"
            android:icon="@drawable/main_menu1"
            android:title="@string/all_events" />

        <item
            android:id="@+id/star_chat"
            android:icon="@drawable/main_menu2"
            android:title="@string/starchat" />

        <item
            android:id="@+id/star_events"
            android:icon="@drawable/main_menu3"
            android:title="@string/starlottery" />

        <item
            android:id="@+id/charities"
            android:icon="@drawable/main_menu4"
            android:title="@string/charities" />

        <item
            android:id="@+id/my_account"
            android:icon="@drawable/main_menu5"
            android:title="@string/my_account" />

        <item
            android:id="@+id/faq"
            android:icon="@drawable/main_menu6"
            android:title="@string/faq_help" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/main_menu7"
            android:title="@string/sign_out" />
    </group>
</menu>

