<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_events"
        android:enabled="true"
        android:icon="@drawable/bottom_menu3"
        android:title="@string/my_events"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_orders"
        android:enabled="true"
        android:icon="@drawable/bottom_menu4"
        android:title="@string/my_orders"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_info"
        android:enabled="true"
        android:icon="@drawable/bottom_menu1"
        android:title="@string/account_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_payment"
        android:enabled="true"
        android:icon="@drawable/bottom_menu2"
        android:title="@string/payment_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_wishlist"
        android:enabled="true"
        android:icon="@drawable/bottom_menu5"
        android:title="@string/wishlist"
        app:showAsAction="ifRoom" />
</menu>