<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/title_orders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/my_orders"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/img_bottom_title_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/title_orders"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        android:background="@color/small_title_color" />

    <LinearLayout
        android:id="@+id/title_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_bottom_title_line"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="12dp"
            android:layout_weight=".3"
            android:text="@string/celebrity"
            android:textColor="#000000"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".3"
            android:text="@string/event_date_time"
            android:textColor="#000000"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".3"
            android:text="@string/amount"
            android:textColor="#000000"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:id="@+id/img_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/title_block"
        android:layout_marginTop="6dp"
        android:background="@color/small_title_color" />

    <ExpandableListView
        android:id="@+id/recycler_view_orders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/img_bottom_line"
        android:layout_marginTop="20dp" />

</RelativeLayout>