<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/title_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/change_password"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/img_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/title_change_password"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        android:background="@color/small_title_color" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/you_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_bottom_line"
        android:layout_gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="12dp"
        android:hint="@string/your_current_password"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:textSize="15sp"
        app:met_baseColor="@color/black"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@color/black"
        app:met_primaryColor="@color/colorAccent"
        app:met_textColor="@color/black"
        app:met_textColorHint="@color/black"
        app:met_underlineColor="@color/black" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/you_current_password"
        android:layout_gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="14dp"
        android:drawablePadding="12dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:textSize="15sp"
        app:met_baseColor="@color/black"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@color/black"
        app:met_primaryColor="@color/colorAccent"
        app:met_textColor="@color/black"
        app:met_textColorHint="@color/black"
        app:met_underlineColor="@color/black"
        app:passwordToggleEnabled="true" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_password"
        android:layout_gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="14dp"
        android:drawablePadding="12dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:textSize="15sp"
        app:met_baseColor="@color/black"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@color/black"
        app:met_primaryColor="@color/colorAccent"
        app:met_textColor="@color/black"
        app:met_textColorHint="@color/black"
        app:met_underlineColor="@color/black"
        app:passwordToggleEnabled="true" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/update_password_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/confirm_password"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_main_style"
        android:text="@string/change"
        android:textAppearance="?android:textAppearanceMediumInverse"
        android:textColor="#ffffff" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/update_password_button"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/button_url_style"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

</RelativeLayout>
