<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="301dp"
        android:layout_height="108dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/block_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logo"
        android:layout_marginTop="21dp"
        android:background="#ffffff">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="17dp"
                    android:text="@string/sign_in"
                    android:textColor="#000000"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="14dp"
                    android:drawablePadding="12dp"
                    android:hint="@string/email_user_name"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:singleLine="true"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="15sp"
                    app:met_baseColor="@color/black"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextColor="@color/black"
                    app:met_primaryColor="@color/colorAccent"
                    app:met_textColor="@color/black"
                    app:met_textColorHint="@color/black"
                    app:met_underlineColor="@color/black" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="14dp"
                    android:drawablePadding="12dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:singleLine="true"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="15sp"
                    app:met_baseColor="@color/black"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextColor="@color/black"
                    app:met_primaryColor="@color/colorAccent"
                    app:met_textColor="@color/black"
                    app:met_textColorHint="@color/black"
                    app:met_underlineColor="@color/black"
                    app:passwordToggleEnabled="true" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="12dp"
                    android:autoLink="all"
                    android:background="@drawable/button_url_style"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="28dp"
                    android:layout_marginRight="28dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/button_main_style"
                    android:text="@string/sign_in_button"
                    android:textAppearance="?android:textAppearanceMediumInverse"
                    android:textColor="#ffffff" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="6dp"
                        android:text="@string/or"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/create_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:autoLink="all"
                        android:gravity="center"
                        android:text="@string/create_account"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="6dp"
                        android:text="@string/if_you_are_a_celebrity"
                        android:textColor="#000000"
                        android:textSize="14sp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/registry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:autoLink="all"
                        android:background="@drawable/button_url_style"
                        android:gravity="center"
                        android:text="@string/register_here"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</RelativeLayout>